simple message to demonstrate simple push command

--- a/project.properties
+++ b/project.properties
@@ -11,3 +11,5 @@ project.repo.url = https://github.com/skeeto/SampleJavaProject.git
 project.scm.url = https://github.com/skeeto/SampleJavaProject
 
 #This line is added to show git pull command
+
+#This line is added to show git push command
