sample message for ssh communication

--- a/project.properties
+++ b/project.properties
@@ -13,3 +13,5 @@ project.scm.url = https://github.com/skeeto/SampleJavaProject
 #This line is added to show git pull command
 
 #This line is added to show git push command
+
+#This line been added for ssh protocol
