--- a/project.properties
+++ b/project.properties
@@ -15,3 +15,5 @@ project.scm.url = https://github.com/skeeto/SampleJavaProject
 #This line is added to show git push command
 
 #This line been added for ssh protocol
+
+#ssh communication based on password
