--- a/project.properties
+++ b/project.properties
@@ -16,4 +16,4 @@ project.scm.url = https://github.com/skeeto/SampleJavaProject
 
 #This line been added for ssh protocol
 
-#ssh communication based on password.
+#ssh communication based on password
